# harsh

./: .gitignore  CMakeLists.txt
Src/: CMakeLists.txt
Src/Harsh/: Haplotype.cpp  Haplotype.h  Harsh.cpp  Harsh.h  HarshIO.cpp  HarshIO.h  HarshUtil.cpp  HarshUtil.h  Parameter.cpp  Parameter.h  Read.cpp  Read.h  Reference.cpp  Reference.h  main.cpp
Src/Harsh/Tests/: HarshTest.cpp  SpaTests.cpp
